@@ -98,6 +98,7 @@ Verilator 5.041 devel
 * Fix DFG circular driver tracing with partial assignments. [Geza Lore]
 * Fix passing typedef value as parameter (#6543) (#6547). [Igor Zaworski, Antmicro Ltd.]
 * Fix indent error on quoted strings (#6544).
+* Fix incorrect nested interface-class error (#6549). [Matthew Ballance]
 
 
 Verilator 5.040 2025-08-30
